[gd_scene load_steps=31 format=2]

[ext_resource path="res://AtlasTexture/player_idle.tres" type="Texture" id=1]
[ext_resource path="res://sprites/fund.png" type="Texture" id=2]
[ext_resource path="res://sprites/fundo2.png" type="Texture" id=3]
[ext_resource path="res://pixel-art-rayquaza-groudon-kyogre-sprite-kyogre-et-groudon-dragon-swampert-leaf-png-clipart-removebg-preview.png" type="Texture" id=4]
[ext_resource path="res://cenas/battle_final.gd" type="Script" id=5]
[ext_resource path="res://Algebrion.tres" type="Resource" id=6]
[ext_resource path="res://NES.tres" type="DynamicFont" id=7]
[ext_resource path="res://NESCyrillic.ttf" type="DynamicFontData" id=8]
[ext_resource path="res://audio/2-15-Frontier-Brain-Battle_.wav" type="AudioStream" id=9]
[ext_resource path="res://cenas/Transition.tscn" type="PackedScene" id=10]
[ext_resource path="res://sprites/_f6cc98aa-1367-41b4-aa68-bf87d071db19-removebg-preview.png" type="Texture" id=11]
[ext_resource path="res://sprites/Captura de tela 2023-11-13 074220.png" type="Texture" id=12]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.0470588, 1, 0, 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 1, 0, 0, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0, 0, 0, 1 )
expand_margin_left = 2.0
expand_margin_right = 2.0
expand_margin_top = 2.0
expand_margin_bottom = 2.0

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0, 0, 0, 0.509804 )

[sub_resource type="DynamicFont" id=4]
size = 64
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=5]
size = 64
font_data = ExtResource( 8 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 1, 1, 1, 1 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0, 0, 0, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0, 0, 0, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 1, 1, 1, 1 )

[sub_resource type="DynamicFont" id=9]
size = 32
font_data = ExtResource( 8 )

[sub_resource type="Animation" id=10]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("EnemyContainer/Enemy:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Camera2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("EnemyContainer:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=11]
resource_name = "enemy_damaged"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("EnemyContainer/Enemy:modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=14]
resource_name = "enemy_defeated"
tracks/0/type = "value"
tracks/0/path = NodePath("EnemyContainer:modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=13]
resource_name = "mini_shake"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Camera2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -2, -2 ), Vector2( -2, 3 ), Vector2( -1, 2 ), Vector2( 3, -2 ), Vector2( 2, 3 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=12]
resource_name = "shake"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Camera2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -7, -7 ), Vector2( -5, 6 ), Vector2( 0, 0 ), Vector2( 5, -4 ), Vector2( 4, 5 ), Vector2( 0, 0 ) ]
}

[sub_resource type="DynamicFont" id=15]
size = 128
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=16]
size = 128
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=17]
size = 128
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=18]
size = 128
font_data = ExtResource( 8 )

[node name="battle_final" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )
enemy = ExtResource( 6 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 513.75, 300 )
scale = Vector2( 2.22234, 1.29694 )
texture = ExtResource( 2 )

[node name="Background" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -290.0
margin_top = -170.0
margin_right = 334.0
margin_bottom = 186.0
texture = ExtResource( 3 )
expand = true

[node name="EnemyContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -263.0
margin_top = -156.0
margin_right = 117.0
margin_bottom = 47.0
rect_scale = Vector2( 1.5, 1.5 )

[node name="ProgressBar" type="ProgressBar" parent="EnemyContainer"]
margin_right = 500.0
margin_bottom = 16.0
rect_min_size = Vector2( 0, 16 )
custom_styles/fg = SubResource( 1 )
custom_styles/bg = SubResource( 2 )
max_value = 35.0
step = 1.0
value = 35.0
percent_visible = false

[node name="Label" type="Label" parent="EnemyContainer/ProgressBar"]
margin_left = 154.0
margin_top = -1.0
margin_right = 217.0
margin_bottom = 13.0
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 7 )
text = "HP: 10/20"
align = 1
valign = 1

[node name="Enemy" type="TextureRect" parent="EnemyContainer"]
margin_top = 20.0
margin_right = 500.0
margin_bottom = 520.0
texture = ExtResource( 4 )
stretch_mode = 4

[node name="PlayerPanel" type="Panel" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -121.0
custom_styles/panel = SubResource( 3 )

[node name="PlayerData" type="HBoxContainer" parent="PlayerPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_right = -8.0
alignment = 1

[node name="Label" type="Label" parent="PlayerPanel/PlayerData"]
margin_top = 37.0
margin_right = 502.0
margin_bottom = 84.0
size_flags_horizontal = 3
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 4 )
text = "PLAYER"
align = 1
valign = 1

[node name="ProgressBar" type="ProgressBar" parent="PlayerPanel/PlayerData"]
margin_left = 506.0
margin_top = 52.0
margin_right = 1008.0
margin_bottom = 68.0
rect_min_size = Vector2( 0, 16 )
size_flags_horizontal = 3
size_flags_vertical = 4
custom_styles/fg = SubResource( 1 )
custom_styles/bg = SubResource( 2 )
max_value = 15.0
step = 1.0
value = 15.0
percent_visible = false

[node name="Label" type="Label" parent="PlayerPanel/PlayerData/ProgressBar"]
margin_left = 217.0
margin_top = -1.0
margin_right = 280.0
margin_bottom = 13.0
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 7 )
text = "HP: 10/20"
align = 1
valign = 1

[node name="Sprite" type="Sprite" parent="PlayerPanel"]
position = Vector2( 85.5, 57.5 )
scale = Vector2( 7.07143, 5.13636 )
texture = ExtResource( 1 )

[node name="ActionsPanel" type="Panel" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -512.0
margin_right = 512.0
margin_bottom = 121.0
custom_styles/panel = SubResource( 3 )

[node name="Actions" type="HBoxContainer" parent="ActionsPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 12.0
margin_top = 12.0
margin_right = -12.0
margin_bottom = -12.0
custom_constants/separation = 12
alignment = 1

[node name="Attack" type="Button" parent="ActionsPanel/Actions"]
margin_right = 325.0
margin_bottom = 97.0
focus_mode = 0
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 5 )
custom_styles/hover = SubResource( 6 )
custom_styles/pressed = SubResource( 6 )
custom_styles/normal = SubResource( 7 )
enabled_focus_mode = 0
text = "ATAQUE"

[node name="Defend" type="Button" parent="ActionsPanel/Actions"]
margin_left = 337.0
margin_right = 662.0
margin_bottom = 97.0
focus_mode = 0
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 5 )
custom_styles/hover = SubResource( 6 )
custom_styles/pressed = SubResource( 6 )
custom_styles/normal = SubResource( 7 )
enabled_focus_mode = 0
text = "ESQUIVAR"

[node name="Run" type="Button" parent="ActionsPanel/Actions"]
margin_left = 674.0
margin_right = 1000.0
margin_bottom = 97.0
focus_mode = 0
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 5 )
custom_styles/hover = SubResource( 6 )
custom_styles/pressed = SubResource( 6 )
custom_styles/normal = SubResource( 7 )
enabled_focus_mode = 0
text = "fugir"

[node name="Textbox" type="Panel" parent="."]
visible = false
anchor_right = 1.0
margin_left = 16.0
margin_top = 16.0
margin_right = -16.0
margin_bottom = 122.0
custom_styles/panel = SubResource( 8 )

[node name="Label" type="Label" parent="Textbox"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 16.0
margin_top = 16.0
margin_right = -16.0
margin_bottom = -16.0
custom_fonts/font = SubResource( 9 )
text = "UM ALGEBRION apareceu!"

[node name="ticker" type="Label" parent="Textbox"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -32.0
margin_top = -40.0
margin_right = -14.0
margin_bottom = 11.0
custom_fonts/font = SubResource( 9 )
text = ">
"

[node name="WindowDialog" type="WindowDialog" parent="."]
margin_right = 48.0
margin_bottom = 40.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 10 )
anims/enemy_damaged = SubResource( 11 )
anims/enemy_defeated = SubResource( 14 )
anims/mini_shake = SubResource( 13 )
anims/shake = SubResource( 12 )

[node name="Camera2D" type="Camera2D" parent="."]
anchor_mode = 0
current = true

[node name="MusicaBoss" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )

[node name="Transition" parent="." instance=ExtResource( 10 )]

[node name="Timer" type="Timer" parent="."]

[node name="Options" type="Node2D" parent="."]

[node name="Option1" type="Sprite" parent="Options"]
position = Vector2( 300, 441 )
scale = Vector2( 0.285, 0.285 )
texture = ExtResource( 12 )

[node name="Label" type="Label" parent="Options/Option1"]
margin_left = -66.6667
margin_top = -49.1228
margin_right = 61.3333
margin_bottom = 44.8772
custom_fonts/font = SubResource( 15 )
text = "25"
align = 1

[node name="Option2" type="Sprite" parent="Options"]
position = Vector2( 418, 441 )
scale = Vector2( 0.285, 0.285 )
texture = ExtResource( 12 )

[node name="Label" type="Label" parent="Options/Option2"]
margin_left = -63.1578
margin_top = -49.1228
margin_right = 64.8422
margin_bottom = 44.8772
custom_fonts/font = SubResource( 16 )
text = "35"
align = 1

[node name="Option3" type="Sprite" parent="Options"]
position = Vector2( 535, 441 )
scale = Vector2( 0.285, 0.285 )
texture = ExtResource( 12 )

[node name="Label" type="Label" parent="Options/Option3"]
margin_left = -56.1404
margin_top = -49.1228
margin_right = 71.8596
margin_bottom = 44.8772
custom_fonts/font = SubResource( 17 )
text = "34"

[node name="Option4" type="Sprite" parent="Options"]
position = Vector2( 655, 441 )
scale = Vector2( 0.285, 0.285 )
texture = ExtResource( 12 )

[node name="Label" type="Label" parent="Options/Option4"]
margin_left = -66.6667
margin_top = -45.614
margin_right = 61.3333
margin_bottom = 48.386
custom_fonts/font = SubResource( 18 )
text = "45"

[node name="seta" type="Sprite" parent="."]
visible = false
position = Vector2( 655, 367 )
rotation = 3.14159
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 11 )

[connection signal="pressed" from="ActionsPanel/Actions/Attack" to="." method="_on_Attack_pressed"]
[connection signal="pressed" from="ActionsPanel/Actions/Defend" to="." method="_on_Defend_pressed"]
[connection signal="pressed" from="ActionsPanel/Actions/Run" to="." method="_on_Run_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
